[project]
name = "openai-moderation-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "schroneko", email = "schroneko.fuller@gmail.com" }
]
dependencies = [
    "install>=1.3.5",
    "openai>=1.14.2",
    "gradio>=4.22.0",
    "asyncio>=3.4.3",
    "tiktoken>=0.6.0",
    "pandas>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/openai_moderation_test"]
